src/main/java/query/parser/QueryParser.java
// Generated from D:/mitre/causality-query/src/main/java/query/parser\QueryParser.g4 by ANTLR 4.9.2

    package query.parser;
    import java.math.BigDecimal;
    import query.backtracking.*;
    import query.search.*;
    import executor.*;
    import java.util.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class QueryParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SEMICOLON=1, COMMA=2, ASTERISK=3, LEFTBRACKET=4, RIGHTBRACKET=5, LEFTBRACE=6, 
		RIGHTBRACE=7, LEFTSQUARE=8, RIGHTSQUARE=9, AND=10, OR=11, NOT=12, IN=13, 
		FROM=14, WITH=15, BACK=16, FORWARD=17, TRACK=18, SEARCH=19, AS=20, DISPLAY=21, 
		EXPORT=22, RETURN=23, SELECT=24, CONNECTDB=25, DB=26, WHERE=27, INCLUDE=28, 
		EXCLUDE=29, NODES=30, EDGES=31, LIMIT=32, TIME=33, STEP=34, MS=35, SECOND=36, 
		MINUTE=37, TYPE=38, NAME=39, PATH=40, DSTIP=41, DSTPORT=42, SRCIP=43, 
		SRCPORT=44, PID=45, EXENAME=46, EXEPATH=47, CMDLINE=48, OPTYPE=49, IDSTR=50, 
		SRCID=51, DSTID=52, STARTTIME=53, ENDTIME=54, AMOUNT=55, PROCESS=56, FILE=57, 
		NETWORK=58, READ=59, WRITE=60, EXECVE=61, NULL=62, ARROW=63, EQ=64, NEQ=65, 
		GT=66, GEQ=67, LT=68, LEQ=69, LIKE=70, UNION=71, INTERSECTION=72, DIFFERENCE=73, 
		LOGAND=74, LOGOR=75, INT=76, STRING=77, ID=78, NEWLINE=79, WS=80, COMMENT=81, 
		LINE_COMMENT=82;
	public static final int
		RULE_start = 0, RULE_connectStmt = 1, RULE_assignStmt = 2, RULE_searchStmt = 3, 
		RULE_displayStmt = 4, RULE_exportStmt = 5, RULE_nodeMatchTerm = 6, RULE_relatTerm = 7, 
		RULE_returnTerm = 8, RULE_nodeAttributes = 9, RULE_logicOpt = 10, RULE_relatConst = 11, 
		RULE_relatExpr = 12, RULE_dataSource = 13, RULE_graphExpr = 14, RULE_trackExpr = 15, 
		RULE_direction = 16, RULE_startTerm = 17, RULE_filterTerm = 18, RULE_typeFilterTerm = 19, 
		RULE_limitTerm = 20, RULE_constraintExpr = 21, RULE_expr = 22, RULE_binaryExpr = 23, 
		RULE_strId = 24, RULE_numId = 25, RULE_entityType = 26, RULE_optType = 27, 
		RULE_eqOp = 28, RULE_numOp = 29;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "connectStmt", "assignStmt", "searchStmt", "displayStmt", "exportStmt", 
			"nodeMatchTerm", "relatTerm", "returnTerm", "nodeAttributes", "logicOpt", 
			"relatConst", "relatExpr", "dataSource", "graphExpr", "trackExpr", "direction", 
			"startTerm", "filterTerm", "typeFilterTerm", "limitTerm", "constraintExpr", 
			"expr", "binaryExpr", "strId", "numId", "entityType", "optType", "eqOp", 
			"numOp"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "','", "'*'", "'('", "')'", "'{'", "'}'", "'['", "']'", 
			"'and'", "'or'", "'not'", "'in'", "'from'", "'with'", "'back'", "'forward'", 
			"'track'", "'search'", "'as'", "'display'", "'export'", "'return'", "'select'", 
			"'connectdb'", "'db'", "'where'", "'include'", "'exclude'", "'nodes'", 
			"'edges'", "'limit'", "'time'", "'step'", "'ms'", "'s'", "'m'", "'type'", 
			"'name'", "'path'", "'dstip'", "'dstport'", "'srcip'", "'srcport'", "'pid'", 
			"'exename'", "'exepath'", "'cmdline'", "'optype'", "'id'", "'srcid'", 
			"'dstid'", "'starttime'", "'endtime'", "'amount'", "'process'", "'file'", 
			"'network'", "'read'", "'write'", "'execve'", "'null'", "'->'", "'='", 
			"'!='", "'>'", "'>='", "'<'", "'<='", "'like'", "'|'", "'&'", "'-'", 
			"'&&'", "'||'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "SEMICOLON", "COMMA", "ASTERISK", "LEFTBRACKET", "RIGHTBRACKET", 
			"LEFTBRACE", "RIGHTBRACE", "LEFTSQUARE", "RIGHTSQUARE", "AND", "OR", 
			"NOT", "IN", "FROM", "WITH", "BACK", "FORWARD", "TRACK", "SEARCH", "AS", 
			"DISPLAY", "EXPORT", "RETURN", "SELECT", "CONNECTDB", "DB", "WHERE", 
			"INCLUDE", "EXCLUDE", "NODES", "EDGES", "LIMIT", "TIME", "STEP", "MS", 
			"SECOND", "MINUTE", "TYPE", "NAME", "PATH", "DSTIP", "DSTPORT", "SRCIP", 
			"SRCPORT", "PID", "EXENAME", "EXEPATH", "CMDLINE", "OPTYPE", "IDSTR", 
			"SRCID", "DSTID", "STARTTIME", "ENDTIME", "AMOUNT", "PROCESS", "FILE", 
			"NETWORK", "READ", "WRITE", "EXECVE", "NULL", "ARROW", "EQ", "NEQ", "GT", 
			"GEQ", "LT", "LEQ", "LIKE", "UNION", "INTERSECTION", "DIFFERENCE", "LOGAND", 
			"LOGOR", "INT", "STRING", "ID", "NEWLINE", "WS", "COMMENT", "LINE_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "QueryParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    private ExecutionContext exeCtx;

	    public QueryParser(TokenStream input, ExecutionContext extCtx) {
	        this(input);
	        this.exeCtx = extCtx;
	    }

	    private ConstraintExpression combine(ConstraintExpression i, ConstraintExpression e) {
	        if (i == null && e == null) return null;
	        else if (i == null) return new NotExpression(e);
	        else if (e == null) return i;
	        else return new AndExpression(i, new NotExpression(e));
	    }

	public QueryParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public LinkedList<QueryStatement> stmts = new LinkedList<>();
		public List<ConnectStmtContext> connectStmt() {
			return getRuleContexts(ConnectStmtContext.class);
		}
		public ConnectStmtContext connectStmt(int i) {
			return getRuleContext(ConnectStmtContext.class,i);
		}
		public List<AssignStmtContext> assignStmt() {
			return getRuleContexts(AssignStmtContext.class);
		}
		public AssignStmtContext assignStmt(int i) {
			return getRuleContext(AssignStmtContext.class,i);
		}
		public List<SearchStmtContext> searchStmt() {
			return getRuleContexts(SearchStmtContext.class);
		}
		public SearchStmtContext searchStmt(int i) {
			return getRuleContext(SearchStmtContext.class,i);
		}
		public List<DisplayStmtContext> displayStmt() {
			return getRuleContexts(DisplayStmtContext.class);
		}
		public DisplayStmtContext displayStmt(int i) {
			return getRuleContext(DisplayStmtContext.class,i);
		}
		public List<ExportStmtContext> exportStmt() {
			return getRuleContexts(ExportStmtContext.class);
		}
		public ExportStmtContext exportStmt(int i) {
			return getRuleContext(ExportStmtContext.class,i);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 19)) & ~0x3f) == 0 && ((1L << (_la - 19)) & ((1L << (SEARCH - 19)) | (1L << (DISPLAY - 19)) | (1L << (EXPORT - 19)) | (1L << (CONNECTDB - 19)) | (1L << (ID - 19)))) != 0)) {
				{
				setState(65);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case CONNECTDB:
					{
					setState(60);
					connectStmt();
					}
					break;
				case ID:
					{
					setState(61);
					assignStmt();
					}
					break;
				case SEARCH:
					{
					setState(62);
					searchStmt();
					}
					break;
				case DISPLAY:
					{
					setState(63);
					displayStmt();
					}
					break;
				case EXPORT:
					{
					setState(64);
					exportStmt();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(69);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConnectStmtContext extends ParserRuleContext {
		public Token STRING;
		public TerminalNode CONNECTDB() { return getToken(QueryParser.CONNECTDB, 0); }
		public TerminalNode STRING() { return getToken(QueryParser.STRING, 0); }
		public TerminalNode SEMICOLON() { return getToken(QueryParser.SEMICOLON, 0); }
		public ConnectStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_connectStmt; }
	}

	public final ConnectStmtContext connectStmt() throws RecognitionException {
		ConnectStmtContext _localctx = new ConnectStmtContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_connectStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			match(CONNECTDB);
			setState(71);
			((ConnectStmtContext)_localctx).STRING = match(STRING);
			setState(72);
			match(SEMICOLON);

			    String str = (((ConnectStmtContext)_localctx).STRING!=null?((ConnectStmtContext)_localctx).STRING.getText():null);
			    ((StartContext)getInvokingContext(0)).stmts.add(new ConnectDbStatement(exeCtx, str.substring(1, str.length() - 1)));

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignStmtContext extends ParserRuleContext {
		public Token ID;
		public GraphExprContext graphExpr;
		public TerminalNode ID() { return getToken(QueryParser.ID, 0); }
		public TerminalNode EQ() { return getToken(QueryParser.EQ, 0); }
		public GraphExprContext graphExpr() {
			return getRuleContext(GraphExprContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(QueryParser.SEMICOLON, 0); }
		public AssignStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignStmt; }
	}

	public final AssignStmtContext assignStmt() throws RecognitionException {
		AssignStmtContext _localctx = new AssignStmtContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_assignStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			((AssignStmtContext)_localctx).ID = match(ID);
			setState(76);
			match(EQ);
			setState(77);
			((AssignStmtContext)_localctx).graphExpr = graphExpr(0);
			setState(78);
			match(SEMICOLON);

			    ((StartContext)getInvokingContext(0)).stmts.add(new AssignStatement(exeCtx, (((AssignStmtContext)_localctx).ID!=null?((AssignStmtContext)_localctx).ID.getText():null), ((AssignStmtContext)_localctx).graphExpr.gq));

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SearchStmtContext extends ParserRuleContext {
		public SearchConstraints sc;
		public DataSourceContext dataSource;
		public NodeMatchTermContext nodeMatchTerm;
		public RelatTermContext relatTerm;
		public ReturnTermContext returnTerm;
		public TerminalNode SEARCH() { return getToken(QueryParser.SEARCH, 0); }
		public TerminalNode FROM() { return getToken(QueryParser.FROM, 0); }
		public DataSourceContext dataSource() {
			return getRuleContext(DataSourceContext.class,0);
		}
		public NodeMatchTermContext nodeMatchTerm() {
			return getRuleContext(NodeMatchTermContext.class,0);
		}
		public RelatTermContext relatTerm() {
			return getRuleContext(RelatTermContext.class,0);
		}
		public ReturnTermContext returnTerm() {
			return getRuleContext(ReturnTermContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(QueryParser.SEMICOLON, 0); }
		public SearchStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_searchStmt; }
	}

	public final SearchStmtContext searchStmt() throws RecognitionException {
		SearchStmtContext _localctx = new SearchStmtContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_searchStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(SEARCH);
			setState(82);
			match(FROM);
			setState(83);
			((SearchStmtContext)_localctx).dataSource = dataSource();
			setState(84);
			((SearchStmtContext)_localctx).nodeMatchTerm = nodeMatchTerm();
			setState(85);
			((SearchStmtContext)_localctx).relatTerm = relatTerm();
			setState(86);
			((SearchStmtContext)_localctx).returnTerm = returnTerm();
			setState(87);
			match(SEMICOLON);

			        ((SearchStmtContext)_localctx).sc =  new SearchConstraints(((SearchStmtContext)_localctx).dataSource.source);
			        _localctx.sc.setNodeConstraints(((SearchStmtContext)_localctx).nodeMatchTerm.cm);
			        _localctx.sc.setEdges(((SearchStmtContext)_localctx).relatTerm.relations);
			        _localctx.sc.setEdgeConstraints(((SearchStmtContext)_localctx).relatTerm.opts);
			        _localctx.sc.setReturnName(((SearchStmtContext)_localctx).returnTerm.name, ((SearchStmtContext)_localctx).returnTerm.isDisplay);
			        ((StartContext)getInvokingContext(0)).stmts.add(new SearchStatement(exeCtx, _localctx.sc));
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DisplayStmtContext extends ParserRuleContext {
		public GraphExprContext graphExpr;
		public TerminalNode DISPLAY() { return getToken(QueryParser.DISPLAY, 0); }
		public GraphExprContext graphExpr() {
			return getRuleContext(GraphExprContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(QueryParser.SEMICOLON, 0); }
		public DisplayStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_displayStmt; }
	}

	public final DisplayStmtContext displayStmt() throws RecognitionException {
		DisplayStmtContext _localctx = new DisplayStmtContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_displayStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			match(DISPLAY);
			setState(91);
			((DisplayStmtContext)_localctx).graphExpr = graphExpr(0);
			setState(92);
			match(SEMICOLON);

			    ((StartContext)getInvokingContext(0)).stmts.add(new DisplayStatement(exeCtx, ((DisplayStmtContext)_localctx).graphExpr.gq));

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExportStmtContext extends ParserRuleContext {
		public GraphExprContext graphExpr;
		public Token STRING;
		public TerminalNode EXPORT() { return getToken(QueryParser.EXPORT, 0); }
		public GraphExprContext graphExpr() {
			return getRuleContext(GraphExprContext.class,0);
		}
		public TerminalNode AS() { return getToken(QueryParser.AS, 0); }
		public TerminalNode STRING() { return getToken(QueryParser.STRING, 0); }
		public TerminalNode SEMICOLON() { return getToken(QueryParser.SEMICOLON, 0); }
		public ExportStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exportStmt; }
	}

	public final ExportStmtContext exportStmt() throws RecognitionException {
		ExportStmtContext _localctx = new ExportStmtContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_exportStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			match(EXPORT);
			setState(96);
			((ExportStmtContext)_localctx).graphExpr = graphExpr(0);
			setState(97);
			match(AS);
			setState(98);
			((ExportStmtContext)_localctx).STRING = match(STRING);
			setState(99);
			match(SEMICOLON);

			    String str = (((ExportStmtContext)_localctx).STRING!=null?((ExportStmtContext)_localctx).STRING.getText():null);
			    ((StartContext)getInvokingContext(0)).stmts.add(new ExportStatement(exeCtx, ((ExportStmtContext)_localctx).graphExpr.gq, str.substring(1, str.length() - 1)));

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NodeMatchTermContext extends ParserRuleContext {
		public HashMap<String, ConstraintExpression> cm = new HashMap<String, ConstraintExpression>();
		public TerminalNode WHERE() { return getToken(QueryParser.WHERE, 0); }
		public NodeAttributesContext nodeAttributes() {
			return getRuleContext(NodeAttributesContext.class,0);
		}
		public NodeMatchTermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nodeMatchTerm; }
	}

	public final NodeMatchTermContext nodeMatchTerm() throws RecognitionException {
		NodeMatchTermContext _localctx = new NodeMatchTermContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_nodeMatchTerm);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(WHERE);
			setState(103);
			nodeAttributes(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RelatTermContext extends ParserRuleContext {
		public ArrayList<ArrayList<String>> relations = new ArrayList<ArrayList<String>>();
		public ArrayList<List<String>> opts = new ArrayList<List<String>>();
		public TerminalNode WITH() { return getToken(QueryParser.WITH, 0); }
		public RelatConstContext relatConst() {
			return getRuleContext(RelatConstContext.class,0);
		}
		public RelatTermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_relatTerm; }
	}

	public final RelatTermContext relatTerm() throws RecognitionException {
		RelatTermContext _localctx = new RelatTermContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_relatTerm);
		try {
			setState(108);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case WITH:
				enterOuterAlt(_localctx, 1);
				{
				setState(105);
				match(WITH);
				setState(106);
				relatConst(0);
				}
				break;
			case RETURN:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReturnTermContext extends ParserRuleContext {
		public String name;
		public Boolean isDisplay;
		public Token ID;
		public TerminalNode RETURN() { return getToken(QueryParser.RETURN, 0); }
		public TerminalNode ASTERISK() { return getToken(QueryParser.ASTERISK, 0); }
		public TerminalNode AS() { return getToken(QueryParser.AS, 0); }
		public TerminalNode ID() { return getToken(QueryParser.ID, 0); }
		public ReturnTermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_returnTerm; }
	}

	public final ReturnTermContext returnTerm() throws RecognitionException {
		ReturnTermContext _localctx = new ReturnTermContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_returnTerm);
		try {
			setState(118);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(110);
				match(RETURN);
				setState(111);
				match(ASTERISK);

				        ((ReturnTermContext)_localctx).name =  "deprecated!";
				        ((ReturnTermContext)_localctx).isDisplay =  true;
				    
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(113);
				match(RETURN);
				setState(114);
				match(ASTERISK);
				setState(115);
				match(AS);
				setState(116);
				((ReturnTermContext)_localctx).ID = match(ID);
